@@ -8,6 +8,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 - Brush strokes are now detected separately, meaning the undo operation won't
 undo everything you have done anymore.
 - Fixed issue with rendering the image when moving to the next patch.
+- Fix issue with incorrect brush size being drawn.
 
 ## [v0.9.1] - 2020-05-27
 ### Changed
